# SidewalkScanner

./: .gitignore  Cargo.toml  README.md  Trunk.toml  integration.txt
point-cloud-render-engine/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html  serve.py
point-cloud-render-engine/assets/encoded_textures/: warsaw_bounds_2k.json
point-cloud-render-engine/assets/output/RigaNumbered0.03/: manifest.json
point-cloud-render-engine/assets/output/warsaw/: manifest.json
point-cloud-render-engine/assets/placeable_assets/: notes.txt
point-cloud-render-engine/assets/placeable_assets/placeable_assets/: notes.txt
point-cloud-render-engine/assets/pre_processor_data/: warsaw_metadata_2048x2048.json
point-cloud-render-engine/assets/shaders/: compute_depth.wgsl  edl_postprocess.wgsl  instanced_assets.wgsl  modified_classification.wgsl  point_cloud.wgsl
point-cloud-render-engine/scripts/: html_config.rs
point-cloud-render-engine/src/: constants.rs  main.rs
point-cloud-render-engine/src/constants/: mod.rs  path.rs  procedural_shader.rs  render_settings.rs  texture.rs
point-cloud-render-engine/src/engine/: camera.rs  compute_classification.rs  edl_compute_depth.rs  edl_post_processing.rs  gizmos.rs  grid.rs  heightmap.rs  materials.rs  mesh.rs  mod.rs  point_cloud.rs  point_cloud_render_pipeline.rs  render_mode.rs  shaders.rs
point-cloud-render-engine/src/engine/assets/: bounds.rs  (+5 more)
point-cloud-render-engine/src/rpc/: mod.rs  web_rpc.rs
point-cloud-render-engine/src/tools/: asset_manager.rs  class_selection.rs  measure.rs  mod.rs  polygon.rs  tool_manager.rs
(+119 files in other folders)
