[package]
name = "point-cloud-render-engine"
version = "0.1.0"
edition = "2024"
# build = "build.rs"

[dependencies]
bevy = { version = "0.16", features = ["exr", "dds", "webgpu"] }
bevy_common_assets = { version = "0.13", features = ["json"] }
las = { version = "0.9", features = ["laz-parallel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3"
bytemuck = "1.23.2"

[build-dependencies]
serde_json = "1.0"
