[package]
name = "point-cloud-render-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = [
  "bevy_ui",
  "bevy_text",
  "bevy_winit", 
  "bevy_pbr",    
  "webgpu",
  "exr",
  "dds",
] }
bevy_common_assets = { version = "0.13", features = ["json"] }
las = { version = "0.9", features = ["laz-parallel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.50"
bytemuck = "1.23.2"
indicatif = "0.18.0"
web-sys = { version = "0.3.78", features = ["Window", "MessageEvent", "console"] }
wasm-bindgen = "0.2.101"
js-sys = "0.3.78"

[build-dependencies]
serde_json = "1.0"
